# SentinelScan

./: README.md  pyproject.toml
.github/workflow/: publish.yml  publish.yml.txt
src/sentinelscan/: __init__.py  __main__.py  scanner.py
