[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelscan"
version = "0.1.0"
description = "A Python-based website security auditing toolkit for analyzing HTTP security headers, SSL/TLS configuration, cookies, forms, crawling, and common web security misconfigurations."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]